tests/files/fail/if_statement_different_types.rl
if true != 2 {
    print("pass");
} else {
    print("fail");
}
